NetBSD Problem Report #34698
From juan@xtrarom.org Mon Oct 2 21:16:01 2006
Return-Path: <juan@xtrarom.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by narn.NetBSD.org (Postfix) with ESMTP id 95F4563B911
for <gnats-bugs@gnats.NetBSD.org>; Mon, 2 Oct 2006 21:16:01 +0000 (UTC)
Message-Id: <20061002211538.83FE119304@xtrarom.org>
Date: Mon, 2 Oct 2006 23:15:38 +0200 (CEST)
From: juan@xtrarom.org
Reply-To: juan@xtrarom.org
To: gnats-bugs@NetBSD.org
Subject: can't establish a powerhook in the pci bus
X-Send-Pr-Version: 3.95
>Number: 34698
>Category: kern
>Synopsis: can't establish a powerhook in the pci bus
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: jmcneill
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Oct 02 21:20:00 +0000 2006
>Closed-Date: Mon Oct 02 21:24:44 +0000 2006
>Last-Modified: Mon Oct 02 21:25:01 +0000 2006
>Originator: Juan RP
>Release: NetBSD 4.99.3
>Organization:
>Environment:
System: NetBSD nocturno 4.99.3 NetBSD 4.99.3 (Nocturno-ACPI) #180: Mon Oct 2 19:44:02 CEST 2006 juan@nocturno:/home/juan/build/obj/sys/arch/i386/compile/Nocturno-ACPI i386
Architecture: i386
Machine: i386
>Description:
With recent changes to pci.c that tries to set a powerhook
on the busses, in some cases (mine) does not work
and powerhook_establish(9) fails.
pci0 at mainbus0 bus 0: configuration mode 1
pci0: i/o space, memory space enabled, rd/line, rd/mult, wr/inv ok
pci0: can't establish powerhook
pchb0 at pci0 dev 0 function 0
ppb0 at pci0 dev 1 function 0: VIA Technologies VT8377CE CPU-AGP Bridge (rev. 0x00)
pci1 at ppb0 bus 1
pci1: i/o space, memory space enabled
pci1: can't establish powerhook
>How-To-Repeat:
>Fix:
Yes, please.
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: kern-bug-people->jmcneill
Responsible-Changed-By: jmcneill@netbsd.org
Responsible-Changed-When: Mon, 02 Oct 2006 21:24:44 +0000
Responsible-Changed-Why:
Mine.
State-Changed-From-To: open->closed
State-Changed-By: jmcneill@netbsd.org
State-Changed-When: Mon, 02 Oct 2006 21:24:44 +0000
State-Changed-Why:
Fixed.
From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/34698 CVS commit: src/sys/dev/pci
Date: Mon, 2 Oct 2006 21:23:44 +0000 (UTC)
Module Name: src
Committed By: jmcneill
Date: Mon Oct 2 21:23:44 UTC 2006
Modified Files:
src/sys/dev/pci: pci.c
Log Message:
Print error on powerhook_establish failure, not success. PR# 34698.
To generate a diff of this commit:
cvs rdiff -r1.100 -r1.101 src/sys/dev/pci/pci.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.