Print error on powerhook_establish failure, not success. PR# 34698.